--- a/src/personal/templates/personal/bet.html
+++ b/src/personal/templates/personal/bet.html
@@ -66,14 +66,61 @@
                     <div class="row">
                         <div class="col-sm-4"></div>
                         <div class="col-sm-8">
-                            <button type="submit" class="btn">Bet</button>
+                            <button class="btn">Bet</button>
+
+                            {% if msg %}
+                            <script>
+                                $(document).ready(function(){
+                                    $('#myModal #message').text('{{ msg }}');
+                                    $('#myModal').modal('show');
+                                });
+                            </script>
+                        {% endif %}
                         </div>
                     </div>
-                    <label class="white-text">{{msg}}</label>
                 </div>
                 
             </form>
         </div>         
     </div>
 </div>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" style="z-index: 1050;margin-top: 10%;">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel" style="color: black;">Bet</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">X</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p style="color: black;" id="message">Modal Message Here</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="okayButton" class="btn" data-dismiss="modal">Okay</button>
+            </div>
+        </div>
+    </div>
+</div>
+<style>
+    .modal-backdrop {
+    z-index: -100; 
+}
+</style>
+<script>
+    $(document).ready(function(){
+        $('.close').click(function(){
+            $('#myModal').modal('hide');
+        });
+
+        $('#okayButton').click(function(){
+            {% if msg and "success" in msg %}
+                window.location.href = '/lobby';
+            {% else %}
+                $('#myModal').modal('hide');
+            {% endif %}
+        });
+    });
+</script>
 {% endblock content %}
