--- a/src/personal/templates/personal/addGame.html
+++ b/src/personal/templates/personal/addGame.html
@@ -116,10 +116,56 @@
                     <input type="button" class="btn" href="/admin" value="Back">
                 </div>
                 <div class="col-sm-4">
-                    <p>{{msg}}</p>
+                    {% if msg %}
+                    <script>
+                        $(document).ready(function(){
+                            $('#myModal #message').text('{{ msg }}');
+                            $('#myModal').modal('show');
+                        });
+                    </script>
+                {% endif %}
+                </div>
+            </div>
+
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" style="z-index: 1050;">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel" style="color: black;">Add Games</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">X</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p style="color: black;" id="message">Modal Message Here</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" id="okayButton" class="btn" data-dismiss="modal">Okay</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </form>
     </div>
 </div>    
+<style>
+    .modal-backdrop {
+    z-index: -100; 
+}
+</style>
+<script>
+    $(document).ready(function(){
+        $('.close').click(function(){
+            $('#myModal').modal('hide');
+        });
+
+        $('#okayButton').click(function(){
+            {% if msg and "success" in msg %}
+                window.location.href = '/add_game';
+            {% else %}
+                $('#myModal').modal('hide');
+            {% endif %}
+        });
+    });
+</script>
 {% endblock content %}
